--- a/history.html
+++ b/history.html
@@ -7,5 +7,6 @@
     <body>
         <div id="username"></div>
         <div id="session"></div>
+        <input type="submit" id="logout" value="logout">
     </body>
 </html>
