--- a/history.html
+++ b/history.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
         <script src="history.js" ></script>
         <meta charset="utf-8" />
     </head>
