--- a/history.html
+++ b/history.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="history.css" rel="stylesheet" type="text/css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
         <script src="history.js" ></script>
         <meta charset="utf-8" />
     </head>
     <body>
-        <div id="username"></div>
-        <div id="session"></div>
+        Welcome: <div id="username"></div>!
+        <table id="chat-table" border="1">
+            <tr>
+                <th>Chat</th>
+                <th>Last Message</th>
+            </tr>
+        </table>
+        <input type="submit" id="newchat" value="newchat">
         <input type="submit" id="logout" value="logout">
     </body>
 </html>
