Started adding chat window

--- a/history.html
+++ b/history.html
@@ -15,5 +15,6 @@
         </table>
         <input type="submit" id="newchat" value="newchat">
         <input type="submit" id="logout" value="logout">
+        <embed src="window.html" align="right"/>
     </body>
 </html>
