--- a/login.html
+++ b/login.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <script src="login.js" ></script>
         <meta charset="utf-8" />
+        <script src="login.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     </head>
     <body>
-        Username: <input type="text" id="username" ><br>
-        Password: <input type="password" id="password" ><br>
-        <input type="submit" id="submit" value="Sign in">
-        <input type="submit" id="register" value="Register">
-        <div id="result"></div>
+        <div id="logo" class="text-center"><h1>Chat Service</h1></div>
+        <div class="container h-100 text-center w-50">
+            <form>
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" >
+                </div>
+            </form>
+            <div class="align-self-center">
+                <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+                <button type="submit" class="btn btn-primary" id="register">Register</button>
+                <div id="result"></div>
+            </div>
+        </div>
     </body>
 </html>
