Started transition to Dockerized Node server

--- a/static/window.html
+++ b/static/window.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="window.css" rel="stylesheet" type="text/css">
+        <link href="css/window.css" rel="stylesheet" type="text/css">
         <meta charset="utf-8" />
     </head>
     <body>
