--- a/static/login.html
+++ b/static/login.html
@@ -2,28 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <script src="login.js"></script>
+        <script src="js/login.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     </head>
     <body>
         <div class="container h-100 text-center w-50">
             <div id="logo" class="text-center"><h1>Chat Service</h1></div>
-            <form>
+            <form method="post">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username">
+                    <input type="text" class="form-control" name="username" id="username">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" >
+                    <input type="password" class="form-control" name="password" id="password" >
+                </div>
+                <div class="align-self-center">
+                    <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+                    <button type="submit" class="btn btn-primary" id="register">Register</button>
+                    <div id="result"></div>
                 </div>
             </form>
-            <div class="align-self-center">
-                <button type="submit" class="btn btn-primary" id="submit">Submit</button>
-                <button type="submit" class="btn btn-primary" id="register">Register</button>
-                <div id="result"></div>
-            </div>
         </div>
     </body>
 </html>
