Added bad credential handling

--- a/static/login.html
+++ b/static/login.html
@@ -19,10 +19,11 @@
                     <input type="password" class="form-control" name="password" id="password" >
                 </div>
                 <div class="align-self-center">
-                    <button type="submit" class="btn btn-primary" id="submit">Submit</button>
-                    <button type="submit" class="btn btn-primary" id="register">Register</button>
+                    <button type="submit" class="btn btn-primary" formaction="signin" id="submit">Submit</button>
+                    <button type="submit" class="btn btn-primary" formaction="signup" id="register">Register</button>
                     <div id="result"></div>
                 </div>
+                <div id="error-text" class="text-center"></div>
             </form>
         </div>
     </body>
